--- a/Parking_Web/Views/Parking/FindParkingSpace.cshtml
+++ b/Parking_Web/Views/Parking/FindParkingSpace.cshtml
@@ -1,4 +1,4 @@
-﻿@model Parking_Domain.ParkingSpaces.ParkingSpace
+﻿@model Parking_Domain.Entities.ParkingSpace
 @{
     ViewData["Title"] = "Find Parking Space";
 }
@@ -6,9 +6,9 @@
 <h1>Find Parking Space</h1>
 <h3>
     Parking:
-    @Model.ParkingLevel.Parking.Address.Country,
+    @*@Model.ParkingLevel.Parking.Address.Country,
     @Model.ParkingLevel.Parking.Address.City,
-    @Model.ParkingLevel.Parking.Address.Street
+    @Model.ParkingLevel.Parking.Address.Street*@
 </h3>
-<h3>Floor: @Model.ParkingLevel.Floor</h3>
+@*<h3>Floor: @Model.ParkingLevel.Floor</h3>*@
 <h3>Parking Space: @Model.Number</h3>
