Update namespaces, add open api

--- a/Parking_Web/Views/Parking/AddLevel.cshtml
+++ b/Parking_Web/Views/Parking/AddLevel.cshtml
@@ -1,4 +1,4 @@
-﻿@model Parking_Web.ViewModels.Parking.ParkingAddLevelViewModel
+﻿@model Web.ViewModels.Parking.ParkingAddLevelViewModel
 
 @{
     ViewData["Title"] = "AddLevel";
