--- a/Parking_Web/Views/Parking/Create.cshtml
+++ b/Parking_Web/Views/Parking/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Parking_Web.ViewModels.Parking.ParkingCreateViewModel
+﻿@model Web.ViewModels.Parking.ParkingCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
