--- a/Parking_Web/Views/Parking/Details.cshtml
+++ b/Parking_Web/Views/Parking/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Parking_Web.ViewModels.Parking.Details.ParkingDetailsViewModel
+﻿@model Web.ViewModels.Parking.Details.ParkingDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
