--- a/Parking_Web/Views/Parking/Edit.cshtml
+++ b/Parking_Web/Views/Parking/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Application.Queries.ParkingInfoDto
+﻿@model ParkingService.Application.Queries.ParkingInfoDto
 
 @{
     ViewData["Title"] = $"Edit {Model.Street} parking";
