--- a/Parking_Web/Views/Parking/FindParkingSpace.cshtml
+++ b/Parking_Web/Views/Parking/FindParkingSpace.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Entities.ParkingSpace
+﻿@model ParkingService.Domain.Entities.ParkingSpace
 @{
     ViewData["Title"] = "Find Parking Space";
 }
