--- a/Parking_Web/Views/Parking/Index.cshtml
+++ b/Parking_Web/Views/Parking/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IReadOnlyList<Application.Queries.ParkingDto>
+﻿@model IReadOnlyList<ParkingService.Application.Queries.ParkingDto>
 @{
     ViewData["Title"] = "Index";
 }
