--- a/Parking_Web/Views/ParkingLevel/AddParkingSpace.cshtml
+++ b/Parking_Web/Views/ParkingLevel/AddParkingSpace.cshtml
@@ -1,4 +1,4 @@
-﻿@model Parking_Web.ViewModels.ParkingLevel.ParkingLevelAddParkingSpaceViewModel
+﻿@model Web.ViewModels.ParkingLevel.ParkingLevelAddParkingSpaceViewModel
 
 @{
     ViewData["Title"] = "AddParkingSpaces";
