--- a/Parking_Web/Views/ParkingLevel/Edit.cshtml
+++ b/Parking_Web/Views/ParkingLevel/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Parking_Web.ViewModels.ParkingLevel.ParkingLevelEditViewModel
+﻿@model Web.ViewModels.ParkingLevel.ParkingLevelEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
