--- a/Parking_Web/Views/ParkingLevel/ParkVehicle.cshtml
+++ b/Parking_Web/Views/ParkingLevel/ParkVehicle.cshtml
@@ -1,4 +1,4 @@
-﻿@model Parking_Web.ViewModels.ParkingLevel.ParkVehicleViewModel
+﻿@model Web.ViewModels.ParkingLevel.ParkVehicleViewModel
 
 @{
     ViewData["Title"] = "ParkVehicle";
